--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,19 @@
 # misc
 .DS_Store
 .env.local
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+
+# SSL
+ssl
+
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# firebase
+firebase.config.js
