--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@mikro-orm/reflection": "^4.5.5",
     "apollo-server": "^2.24.1",
     "apollo-server-express": "^2.24.1",
+    "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
     "type-graphql": "^1.1.1"
