--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,13 @@
     "@types/node": "^15.3.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "antd": "^4.15.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.4",
-    "antd": "^4.15.6",
     "redux-saga": "^1.1.3",
+    "typescript": "^4.2.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
