--- a/server/package.json
+++ b/server/package.json
@@ -10,27 +10,17 @@
     "start": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.5",
-    "@mikro-orm/core": "^4.5.5",
-    "@mikro-orm/postgresql": "^4.5.5",
-    "@mikro-orm/reflection": "^4.5.5",
     "apollo-server": "^2.24.1",
     "apollo-server-express": "^2.24.1",
     "class-validator": "^0.13.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
