--- a/server/package.json
+++ b/server/package.json
@@ -17,16 +17,23 @@
     "apollo-server": "^2.24.1",
     "apollo-server-express": "^2.24.1",
     "class-validator": "^0.13.1",
+    "connect-redis": "^5.2.0",
     "dataloader": "^2.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.5.0",
+    "ioredis": "^4.27.3",
     "pg": "^8.6.0",
+    "redis": "^3.1.2",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.32"
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.16",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/node": "^15.3.0",
+    "@types/redis": "^2.8.28",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
